Update the question

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>    
 <body>
 <div>
-    <h1>Can we meet for a coffee? </h1>
+    <h1> Can I get a pay raise? </h1>
 
 <button id="buttonY" class="buttonY" role="button" > Yes </button>
 <button id="buttonN"  class="buttonN" role="button" onmouseover="buttonN(this)"> No </button>
